// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchMenu renders correctly with category info 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0}
  placement="left"
>
  item 1
</Tooltip>
`;

exports[`SearchMenu renders correctly with category info 2`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0}
  placement="left"
>
  item 2
</Tooltip>
`;

exports[`SearchMenu renders correctly with options and one category 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0}
  placement="left"
>
  item 1
</Tooltip>
`;

exports[`SearchMenu renders correctly with options and one category 2`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0}
  placement="left"
>
  item 2
</Tooltip>
`;
